Archipelago plugin ported to new architecture
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1262 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.archipelago/plugin.xml
+++ b/net.sourceforge.eclipsetrader.archipelago/plugin.xml
@@ -2,12 +2,12 @@
 <?eclipse version="3.0"?>
 <plugin>
    <extension
-         point="net.sourceforge.eclipsetrader.core.feeds">
-      <feed
-            id="net.sourceforge.eclipsetrader.archipelago"
+         point="org.eclipsetrader.core.connectors">
+      <connector
+            class="org.eclipsetrader.archipelago.Level2Feed"
+            id="org.eclipsetrader.connectors.archipelago"
             name="Archipelago">
-         <level2 class="net.sourceforge.eclipsetrader.archipelago.Level2Feed"/>
-      </feed>
+      </connector>
    </extension>
 
 </plugin>
