Archipelago plugin project rename
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1263 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.archipelago/.project
+++ b/org.eclipsetrader.archipelago/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>net.sourceforge.eclipsetrader.archipelago</name>
+	<name>org.eclipsetrader.archipelago</name>
 	<comment></comment>
 	<projects>
 	</projects>
