Watch list viewer split and refactorings
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1271 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.ui/plugin.xml
+++ b/org.eclipsetrader.ui/plugin.xml
@@ -59,6 +59,12 @@
             name="WatchList">
       </view>
       <view
+            class="org.eclipsetrader.ui.internal.views.TickersView"
+            icon="icons/eview16/watchlist.gif"
+            id="org.eclipsetrader.ui.views.tickers"
+            name="Tickers">
+      </view>
+      <view
             allowMultiple="true"
             category="org.eclipsetrader.ui"
             class="org.eclipsetrader.ui.internal.views.Level2View"
