--- a/org.eclipsetrader.directa/plugin.xml
+++ b/org.eclipsetrader.directa/plugin.xml
@@ -18,10 +18,6 @@
             id="org.eclipsetrader.directa.connector"
             name="Directa">
       </connector>
-      <property
-            id="org.eclipsetrader.directa.symbol"
-            name="Symbol">
-      </property>
    </extension>
    <extension
          name="Borsa Italiana"
@@ -224,6 +220,77 @@
                menubarPath="directa/group.start"
                style="push"/>
       </actionSet>
+   </extension>
+   <extension
+         point="org.eclipsetrader.core.brokers">
+      <broker
+            class="org.eclipsetrader.directa.internal.core.BrokerConnector"
+            id="org.eclipsetrader.brokers.directa"
+            name="Directa">
+      </broker>
+   </extension>
+   <extension
+         point="org.eclipse.ui.commands">
+      <command
+            categoryId="org.eclipse.ui.category.navigate"
+            description="Trade the selected security"
+            id="org.eclipsetrader.ui.file.trade.directa"
+            name="Trade">
+      </command>
+   </extension>
+   <extension
+         point="org.eclipse.ui.handlers">
+      <handler
+            commandId="org.eclipsetrader.ui.file.trade.directa">
+         <class
+               class="org.eclipsetrader.directa.internal.ui.TradeHandler">
+         </class>
+         <activeWhen>
+            <and>
+               <count
+                     value="1">
+               </count>
+               <iterate
+                     operator="and">
+                  <test
+                        property="org.eclipsetrader.connectors.directa.canTrade">
+                  </test>
+               </iterate>
+            </and>
+         </activeWhen>
+      </handler>
+   </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            locationURI="popup:org.eclipse.ui.popup.any?after=group.open">
+         <command
+               commandId="org.eclipsetrader.ui.file.trade.directa">
+            <visibleWhen>
+               <and>
+                  <count
+                        value="1">
+                  </count>
+                  <iterate
+                        operator="and">
+                     <test
+                           property="org.eclipsetrader.connectors.directa.canTrade">
+                     </test>
+                  </iterate>
+               </and>
+            </visibleWhen>
+         </command>
+      </menuContribution>
+   </extension>
+   <extension
+         point="org.eclipse.core.expressions.propertyTesters">
+      <propertyTester
+            class="org.eclipsetrader.directa.internal.ui.PropertyTester"
+            id="org.eclipsetrader.directa.propertyTester"
+            namespace="org.eclipsetrader.connectors.directa"
+            properties="canTrade"
+            type="java.lang.Object">
+      </propertyTester>
    </extension>
 
 </plugin>
