Use common Borsa Italiana feed properties with DirectaWorld plugin
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1276 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.directaworld/plugin.xml
+++ b/org.eclipsetrader.directaworld/plugin.xml
@@ -9,9 +9,17 @@
             id="org.eclipsetrader.directaworld.connector"
             name="DirectaWorld">
       </connector>
+   </extension>
+   <extension
+         name="Borsa Italiana"
+         point="org.eclipsetrader.core.connectors">
       <property
-            id="org.eclipsetrader.directaworld.symbol"
-            name="Symbol">
+            id="org.eclipsetrader.borsaitalia.isin"
+            name="ISIN">
+      </property>
+      <property
+            id="org.eclipsetrader.borsaitalia.code"
+            name="Code">
       </property>
    </extension>
    <extension
