Implement backfill connectors
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1288 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.borsaitalia/plugin.xml
+++ b/org.eclipsetrader.borsaitalia/plugin.xml
@@ -4,6 +4,11 @@
    <extension
          name="Borsa Italiana"
          point="org.eclipsetrader.core.connectors">
+      <backfill
+            class="org.eclipsetrader.borsaitalia.internal.core.BackfillConnector"
+            id="org.eclipsetrader.borsaitalia"
+            name="Borsa Italiana">
+      </backfill>
       <property
             id="org.eclipsetrader.borsaitalia.isin"
             name="ISIN">
