Added market backfill and broker settings
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1296 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.directa/plugin.xml
+++ b/org.eclipsetrader.directa/plugin.xml
@@ -292,5 +292,13 @@
             type="java.lang.Object">
       </propertyTester>
    </extension>
+   <extension
+         point="org.eclipsetrader.core.brokers">
+      <broker
+            class="org.eclipsetrader.directa.internal.core.BrokerConnector"
+            id="org.eclipsetrader.directa.broker"
+            name="Directa">
+      </broker>
+   </extension>
 
 </plugin>
