--- a/org.eclipsetrader.core/plugin.xml
+++ b/org.eclipsetrader.core/plugin.xml
@@ -5,5 +5,6 @@
    <extension-point id="org.eclipsetrader.core.elementFactories" name="Element Factories" schema="schema/elementFactory.exsd"/>
    <extension-point id="org.eclipsetrader.core.connectors" name="Feed Connectors" schema="schema/connectors.exsd"/>
    <extension-point id="org.eclipsetrader.core.providers" name="Data Providers" schema="schema/providers.exsd"/>
+   <extension-point id="org.eclipsetrader.core.brokers" name="Brokers" schema="schema/brokers.exsd"/>
 
 </plugin>
