Added trade command handlers and generic order form
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1299 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.brokers.paper/plugin.xml
+++ b/org.eclipsetrader.brokers.paper/plugin.xml
@@ -9,5 +9,26 @@
             name="Paper (Simulated)">
       </broker>
    </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            locationURI="popup:org.eclipsetrader.ui.file.trade?after=additions">
+         <command
+               commandId="org.eclipsetrader.ui.file.trade"
+               label="Paper (Simulated)">
+            <visibleWhen>
+               <and>
+                  <count
+                        value="1">
+                  </count>
+               </and>
+            </visibleWhen>
+            <parameter
+                  name="broker"
+                  value="org.eclipsetrader.brokers.paper">
+            </parameter>
+         </command>
+      </menuContribution>
+   </extension>
 
 </plugin>
