Fixed ta-lib and paper broker features branding
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1301 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/com.tictactec.ta.lib/build.properties
+++ b/com.tictactec.ta.lib/build.properties
@@ -2,5 +2,8 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                about_files/,\
-               about.html
+               about.html,\
+               about.ini,\
+               about.mappings,\
+               about.properties
 source.. = src/
