--- a/org.eclipsetrader.brokers.paper/build.properties
+++ b/org.eclipsetrader.brokers.paper/build.properties
@@ -3,4 +3,7 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               epl-v10.html
+               epl-v10.html,\
+               about.ini,\
+               about.mappings,\
+               about.properties
