--- a/org.otfeed/build.properties
+++ b/org.otfeed/build.properties
@@ -3,4 +3,7 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                about.html,\
-               about_files/
+               about_files/,\
+               about.ini,\
+               about.mappings,\
+               about.properties
