Fixed trade menu items visibility rules
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1309 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.ui.trading/plugin.xml
+++ b/org.eclipsetrader.ui.trading/plugin.xml
@@ -42,6 +42,11 @@
                   <count
                         value="1">
                   </count>
+                  <iterate>
+                     <adapt
+                           type="org.eclipsetrader.core.instruments.ISecurity">
+                     </adapt>
+                  </iterate>
                </and>
             </visibleWhen>
          </command>
@@ -54,6 +59,18 @@
             <separator
                   name="additions">
             </separator>
+            <visibleWhen>
+               <and>
+                  <count
+                        value="1">
+                  </count>
+                  <iterate>
+                     <adapt
+                           type="org.eclipsetrader.core.instruments.ISecurity">
+                     </adapt>
+                  </iterate>
+               </and>
+            </visibleWhen>
          </menu>
       </menuContribution>
    </extension>
