Renamed watchlist view part class
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1319 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.ui/plugin.xml
+++ b/org.eclipsetrader.ui/plugin.xml
@@ -53,7 +53,7 @@
       <view
             allowMultiple="true"
             category="org.eclipsetrader.ui"
-            class="org.eclipsetrader.ui.internal.views.WatchListViewer"
+            class="org.eclipsetrader.ui.internal.views.WatchListView"
             icon="icons/eview16/watchlist.gif"
             id="org.eclipsetrader.ui.views.watchlist"
             name="WatchList">
